<resources>
    <string name="app_name">MyToDoS</string>
    <string name="title_activity_start_logo"></string>
    <string name="title_activity_load_month"></string>
    <string name="title_activity_add_to_do"></string>

    <string name="base_date">1970/01/01</string>

    <string name="logo_image_description">Logo image</string>

    <!-- Date format-->
    <string name="date_format">%1$d/%2$d/%3$d</string>

    <string name="channel_name">ToDos channel</string>
    <string name="channel_description">ToDos</string>

    <!-- Month squares-->
    <string name="square1">square1</string>
    <string name="square2">square2</string>
    <string name="square3">square3</string>
    <string name="square4">square4</string>
    <string name="square5">square5</string>
    <string name="square6">square6</string>
    <string name="square7">square7</string>
    <string name="square8">square8</string>
    <string name="square9">square9</string>
    <string name="square10">square10</string>
    <string name="square11">square11</string>
    <string name="square12">square12</string>
    <string name="square13">square13</string>
    <string name="square14">square14</string>
    <string name="square15">square15</string>
    <string name="square16">square16</string>
    <string name="square17">square17</string>
    <string name="square18">square18</string>
    <string name="square19">square19</string>
    <string name="square20">square20</string>
    <string name="square21">square21</string>
    <string name="square22">square22</string>
    <string name="square23">square23</string>
    <string name="square24">square24</string>
    <string name="square25">square25</string>
    <string name="square26">square26</string>
    <string name="square27">square27</string>
    <string name="square28">square28</string>
    <string name="square29">square29</string>
    <string name="square30">square30</string>
    <string name="square31">square31</string>
    <string name="square32">square32</string>
    <string name="square33">square33</string>
    <string name="square34">square34</string>
    <string name="square35">square35</string>
    <string name="square36">square35</string>
    <string name="square37">square35</string>
    <string name="square38">square35</string>
    <string name="square39">square35</string>
    <string name="square40">square35</string>
    <string name="square41">square35</string>
    <string name="square42">square35</string>

    <!-- textViews tools texts-->
    <string name="textViewCurrentDate">November</string>

    <!-- status texts-->
    <string name="pending_status">PENDING</string>
    <string name="in_progress_status">IN PROGRESS</string>
    <string name="canceled_status">CANCELED</string>
    <string name="done_status">DONE</string>

    <!-- Delete reminder alert strings-->
    <string name="delete_reminder_alert_message">Do you want to remove reminder?</string>
    <string name="delete_reminder_positive">YES</string>
    <string name="delete_reminder_negative">NO</string>

    <!-- Activity_main layout strings-->
    <!-- Button texts-->
    <string name="show_month_button_text">SHOW MONTH</string>
    <string name="close_app_button_text">CLOSE APPLICATION</string>

    <!-- Activity_load_month layout strings-->
    <!-- Button texts-->
    <string name="previous_button_text">Previous</string>
    <string name="next_button_text">Next</string>
    <string name="show_active_rems_button">SHOW ACTIVE</string>
    <string name="show_closed_rems_button">SHOW CLOSED</string>
    <string name="show_all_rems_button">SHOW ALL</string>

    <!-- Activity_add_to_do layout strings-->
    <!-- Title-->
    <string name="activity_add_to_do_title_text">Add Reminder</string>
    <!-- Labels-->
    <string name="start_date_label_text">Start date</string>
    <string name="finish_date_label_text">Finish date</string>
    <string name="comment_label_text">Short Comment</string>
    <!-- Text-->
    <string name="date_text_field_text">1970/01/01</string>
    <string name="comment_text_field_text">Comment task...</string>

    <!-- Activity_choose_action layout strings-->
    <!-- Title-->
    <string name="activity_choose_action_title_text">Choose action</string>
    <!-- Button texts-->
    <string name="add_new_reminder_button_text">ADD NEW...</string>
    <string name="show_rems_by_date_button_text">SHOW REMINDERS</string>
    <!-- Text-->
    <string name="chose_action_date_text_field_text">1970/01/01</string>

    <!-- KIND selection menu texts-->
    <!-- Button texts-->
    <string name="job_kind_button_text">JOB</string>
    <string name="home_kind_button_text">HOME</string>
    <string name="other_kind_button_text">OTHER</string>
    <string name="add_button_text">ADD</string>

    <!-- rem_item_view strings-->
    <!-- Texts-->
    <string name="show_kind_text_view_text">KIND</string>
    <string name="show_title_text_view_text">TITLE</string>
    <string name="show_comment_text_view_text">COMMENT</string>
    <string name="show_date_text_view_text">SHOW DATE</string>
    <string name="show_status_text_view_text">STATUS</string>
    <!-- Label texts-->
    <string name="show_start_date_label_text">START DATE:</string>
    <string name="show_finish_date_label_text">FINISH DATE:</string>

    <!-- spinner_item_view strings-->
    <!-- Texts-->
    <string name="spinner_item_text_view_text">spinner item</string>
</resources>
