<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAppBacground"
    tools:context=".ChoseActionActivity">

    <TextView
        android:id="@+id/choose_action_date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:contentDescription="@string/chose_action_date_text_field_text"
        android:text="@string/chose_action_date_text_field_text"
        android:textColor="@color/colorButtonTextColor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/chose_action_date_text_field_text" />

    <Button
        android:id="@+id/add_new_rem_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_menu_button_size"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_layout_not_pressed"
        android:text="@string/add_new_reminder_button_text"
        android:textColor="@color/colorButtonTextColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_action_date_textView"
        tools:text="@string/add_new_reminder_button_text" />

    <Button
        android:id="@+id/show_rems_by_date_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/main_menu_button_size"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:background="@drawable/button_layout_not_pressed"
        android:contentDescription="@string/show_all_rems_button"
        android:text="@string/show_rems_by_date_button_text"
        android:textColor="@color/colorButtonTextColor"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_new_rem_button"
        tools:text="@string/show_rems_by_date_button_text" />

</android.support.constraint.ConstraintLayout>