<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowAllRemsActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/show_all_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorAppBacground"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAppBacground"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/sort_by_job_type_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="0.3"
            android:background="@drawable/button_layout_not_pressed"
            android:contentDescription="@string/job_kind_button_text"
            android:text="@string/job_kind_button_text"
            android:textColor="@color/colorButtonTextColor"
            tools:text="@string/job_kind_button_text" />

        <Button
            android:id="@+id/sort_by_home_type_button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="0.3"
            android:background="@drawable/button_layout_not_pressed"
            android:contentDescription="@string/home_kind_button_text"
            android:text="@string/home_kind_button_text"
            android:textColor="@color/colorButtonTextColor"
            tools:text="@string/home_kind_button_text" />

        <Button
            android:id="@+id/sort_by_other_type_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="0.3"
            android:background="@drawable/button_layout_not_pressed"
            android:contentDescription="@string/other_kind_button_text"
            android:text="@string/other_kind_button_text"
            android:textColor="@color/colorButtonTextColor"
            tools:text="@string/other_kind_button_text" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>